--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URL=mongodb+srv://himanshuparashar0101:9tqQWRQ6yATERRBm@taskmanagerapplication.clnoy6v.mongodb.net/?retryWrites=true&w=majority&appName=taskmanagerapplication
+MONGODB_URL=mongodb+srv://himanshuparashar0101:9tqQWRQ6yATERRBm@taskmanagerapplication.clnoy6v.mongodb.net/?retryWrites=true&w=majority&appName=taskmanagerapplication&ssl=true&tlsAllowInvalidCertificates=true
 PASSWORD_SECRET_KEY="abc"
 TOKEN_SECRET_KEY="abc"
